fixed font size on mobile

--- a/my_site/static/css/style.css
+++ b/my_site/static/css/style.css
@@ -274,4 +274,11 @@ h2 {
     .nav ul{
         font-size: 14px;
     }
+    .content-skills {
+        font-size: 10px;
+    }
+
+    .card-content p {
+        font-size: 12px;
+    }
 }
